CU-86bam1ce0 feat: add crapi-payments payment simulation microservice (#303)
